# pyminiaudio

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  build_ffi_module.py  miniaudio.c  miniaudio.py  pyproject.toml  requirements-dev.txt  requirements-test.txt  setup.cfg  setup.py
.github/workflows/: main.yml  release.yml  wheelbuilder.yml  wheeltest.yml
examples/: capture.py  convert.py  dataconversion.py  demo1.py  demo2.py  demo3.py  demo4.py  demo5.py  demo6.py  devices.py  duplex.py  internetradio.py  modconvert.py  modplay.py  numpysample.py  play.py  playcallbacks.py  streamingconvert.py
miniaudio/: jar_mod.h  jar_xm.h  miniaudio.h
tests/: conftest.py  test_miniaudio.py
tests/audio/: test.flac
