[metadata]
description = python bindings for the miniaudio library and its decoders (mp3, flac, ogg vorbis, wav)
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/irmen/pyminiaudio
author = Irmen de Jong
author_email = irmen@razorvine.net
keywords = sound, audio, playback, recording, conversion, decoding
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Programming Language :: C
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Multimedia :: Sound/Audio
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Sound/Audio :: Capture/Recording
    Topic :: Multimedia :: Sound/Audio :: Players

[pycodestyle]
max-line-length = 120
exclude = .git,__pycache__,.tox,.eggs,.mypy_cache,build,build_ffi_module.py
